--- a/style.css
+++ b/style.css
@@ -1,14 +1,25 @@
-body {
+/*global selector*/
+* {
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #e9ecef;
+    list-style: none;
+}
+
+/*body {
+
+    background-color: #ffffff;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+
+
     background-image: linear-gradient(to right top, #6d6b6e, #0d0d0e);
-}
+}*/
 
 #loginForm {
     background: #ffffff;
@@ -32,19 +43,19 @@ body {
 
 .form-group input[type='text'],
 .form-group input[type='password'] {
-    width: calc(100% - 40px); /* Adjusted to account for icon padding */
-    padding: 12px 10px 12px 40px; /* Adjusted padding to make room for the icon */
+    width: calc(100% - 40px);
+    padding: 12px 10px 12px 40px;
     border: none;
     border-bottom: 2px solid #ced4da;
     border-radius: 0;
-    transition: border-color 0.3s, box-shadow 0.3s; /* Added box-shadow transition */
+    transition: border-color 0.3s, box-shadow 0.3s;
 }
 
 .form-group input[type='text']:focus,
 .form-group input[type='password']:focus {
     outline: none;
     border-bottom-color: #007bff;
-    box-shadow: 0 1px 0 0 #007bff; /* Moved from separate rule */
+    box-shadow: 0 1px 0 0 #007bff;
 }
 
 .form-group input[type='submit'] {
@@ -63,15 +74,53 @@ body {
     background-color: #0056b3;
 }
 
-/* Icon styles */
+
 .icon {
     position: absolute;
     padding: 10px;
     pointer-events: none;
 }
 
-/* Adjusting input padding to make room for the icon */
 .form-group input[type='text'],
 .form-group input[type='password'] {
-    padding-left: 30px; /* Space for the icon */
+    padding-left: 30px;
 }
+
+/*navbar*/
+.nav {
+
+    background-color: #a6a9ac;
+    display: flex;
+    justify-content: space-between;
+color: #050505;
+
+}
+
+.nav>div {
+    padding: 10px;
+    
+}
+.nav>li{
+    float: left;
+    justify-content: space-between;
+}
+
+.nav>div>ul {
+    display: flex;
+    gap: 20px;
+
+}
+.nav:first-child{
+
+}
+.nav>div>ul>li:hover{
+    text-decoration: solid;
+    cursor: pointer;
+    color: #fdfffb;
+    font-size: 20px;
+
+    
+}
+
+
+/*navbar end*/
